# squirrel

./: .pre-commit-config.yaml  CLAUDE.md  README.md  example.py  justfile  main.py  pyproject.toml
src/squirrel/: dag.py  db.py  prompts.py
test/: test_basic.py
